--- a/TestFiles/Project11/Square/Main.vm
+++ b/TestFiles/Project11/Square/Main.vm
@@ -1,10 +1,7 @@
 function Main.main 1
 call SquareGame.new 0
 pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 0
 call SquareGame.run 1
 pop temp 0
