--- a/TestFiles/Project11/Square/Square.vm
+++ b/TestFiles/Project11/Square/Square.vm
@@ -3,20 +3,11 @@ push constant 3
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push argument 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push argument 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 call draw 0
 push pointer 0
 return
@@ -83,10 +74,7 @@ pop temp 0
 push this 2
 push constant 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 call draw 0
 pop temp 0
 goto end.144
@@ -106,10 +94,7 @@ pop temp 0
 push this 2
 push constant 2
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 call draw 0
 pop temp 0
 goto end.194
@@ -144,10 +129,7 @@ pop temp 0
 push this 1
 push constant 2
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push constant 1
 not
 call Screen.setColor 1
@@ -192,10 +174,7 @@ pop temp 0
 push this 1
 push constant 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push constant 1
 not
 call Screen.setColor 1
@@ -246,10 +225,7 @@ pop temp 0
 push this 0
 push constant 2
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push constant 1
 not
 call Screen.setColor 1
@@ -294,10 +270,7 @@ pop temp 0
 push this 0
 push constant 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push constant 1
 not
 call Screen.setColor 1
@@ -324,6 +297,14 @@ return
 
 
 //class symbol table
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
 //name: size
 //type: int
 //kind: this
@@ -331,6 +312,14 @@ return
 
 
 //method's symbol table
+//name: Ax
+//type: int
+//kind: argument
+//number: 0
+//name: Ay
+//type: int
+//kind: argument
+//number: 1
 //name: Asize
 //type: int
 //kind: argument
