--- a/TestFiles/Project10/ArrayTest/Main.vm
+++ b/TestFiles/Project10/ArrayTest/Main.vm
@@ -2,22 +2,13 @@ function Main.main 4
 push constant HOW MANY NUMBERS?  
 call Keyboard.readInt 1
 pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push local 1
 call Array.new 1
 pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 label true.48
 push local 2
 push local 1
@@ -29,28 +20,16 @@ add
 push constant ENTER THE NEXT NUMBER:  
 call Keyboard.readInt 1
 pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 2
 push constant 1
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 label end.48
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 3
 label true.86
 push local 2
 push local 1
@@ -63,17 +42,11 @@ add
 pop pointer 1
 push that 0
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 3
 push local 2
 push constant 1
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 label end.86
 push constant THE AVERAGE IS:  
 call Output.printString 1
@@ -93,6 +66,18 @@ return
 
 
 //method's symbol table
+//name: a
+//type: Array
+//kind: var
+//number: 0
+//name: length
+//type: int
+//kind: var
+//number: 1
+//name: i
+//type: int
+//kind: var
+//number: 2
 //name: sum
 //type: int
 //kind: var
