--- a/TestFiles/Project11/Average/Main.vm
+++ b/TestFiles/Project11/Average/Main.vm
@@ -1,26 +1,16 @@
 function Main.main 4
 push constant How many numbers?  
 call Keyboard.readInt 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push local 1
 call Array.new 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 label true.48
 push local 2
 push local 1
+lt
 not
 if-goto end.48
 push local 0
@@ -28,11 +18,7 @@ push local 2
 add
 push constant Enter a number:  
 call Keyboard.readInt 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 3
 push local 0
 push local 2
@@ -40,17 +26,11 @@ add
 pop pointer 1
 push that 0
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 3
 push local 2
 push constant 1
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 label end.48
 push constant The average is  
 call Output.printString 1
@@ -68,6 +48,18 @@ return
 
 
 //method's symbol table
+//name: a
+//type: Array
+//kind: var
+//number: 0
+//name: length
+//type: int
+//kind: var
+//number: 1
+//name: i
+//type: int
+//kind: var
+//number: 2
 //name: sum
 //type: int
 //kind: var
