--- a/TestFiles/Project11/Pong/Ball.vm
+++ b/TestFiles/Project11/Pong/Ball.vm
@@ -1,46 +1,25 @@
 function Ball.new 0
-push constant 15
+push constant 0
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push argument 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push argument 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 10
 push argument 3
 push constant 6
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 11
 push argument 4
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 12
 push argument 5
 push constant 6
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 13
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 14
 call show 0
 push pointer 0
 return
@@ -60,7 +39,6 @@ not
 call Screen.setColor 1
 pop temp 0
 call draw 0
-pop temp 0
 push constant 0
 return
 function Ball.hide 0
@@ -70,7 +48,6 @@ push constant 0
 call Screen.setColor 1
 pop temp 0
 call draw 0
-pop temp 0
 push constant 0
 return
 function Ball.draw 0
@@ -106,107 +83,65 @@ pop pointer 0
 push argument 1
 push this 0
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 push argument 2
 push this 1
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 3
 push this 2
 call Math.abs 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push this 3
 call Math.abs 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push local 0
 push local 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+lt
+pop this 7
 push this 7
 not
 if-goto false.288
 push local 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 push local 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push this 1
 push argument 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+lt
+pop this 8
 push this 0
 push argument 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+lt
+pop this 9
 goto end.288
 label false.288
 push this 0
 push argument 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+lt
+pop this 8
 push this 1
 push argument 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+lt
+pop this 9
 label end.288
 push constant 2
 push local 1
 call Math.multiply 2
 push local 0
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 4
 push constant 2
 push local 1
 call Math.multiply 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 5
 push constant 2
 push local 1
 push local 0
 sub
 call Math.multiply 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 6
 push constant 0
 return
 function Ball.move 0
@@ -215,24 +150,19 @@ pop pointer 0
 call hide 0
 push this 4
 push constant 0
+lt
 not
 if-goto false.391
 push this 4
 push this 5
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 4
 goto end.391
 label false.391
 push this 4
 push this 6
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 4
 push this 9
 not
 if-goto false.415
@@ -242,19 +172,13 @@ if-goto false.420
 push this 0
 push constant 4
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 goto end.420
 label false.420
 push this 1
 push constant 4
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 label end.420
 goto end.415
 label false.415
@@ -264,19 +188,13 @@ if-goto false.446
 push this 0
 push constant 4
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 goto end.446
 label false.446
 push this 1
 push constant 4
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 label end.446
 label end.415
 label end.391
@@ -289,19 +207,13 @@ if-goto false.476
 push this 1
 push constant 4
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.476
 label false.476
 push this 0
 push constant 4
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 label end.476
 goto end.471
 label false.471
@@ -311,90 +223,64 @@ if-goto false.502
 push this 1
 push constant 4
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.502
 label false.502
 push this 0
 push constant 4
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 label end.502
 label end.471
 push this 0
 push this 10
+gt
 not
 not
 if-goto false.526
 push constant 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 14
 push this 10
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 goto end.526
 label false.526
 label end.526
 push this 0
 push this 11
+lt
 not
 not
 if-goto false.547
 push constant 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 14
 push this 11
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 goto end.547
 label false.547
 label end.547
 push this 1
 push this 12
+gt
 not
 not
 if-goto false.568
 push constant 3
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 14
 push this 12
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.568
 label false.568
 label end.568
 push this 1
 push this 13
+lt
 not
 not
 if-goto false.589
 push constant 4
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 14
 push this 13
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.589
 label false.589
 label end.589
@@ -407,56 +293,45 @@ pop pointer 0
 push this 2
 push constant 10
 call Math.divide 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 push this 3
 push constant 10
 call Math.divide 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 3
 push argument 1
 push constant 0
 eq
 not
 if-goto false.653
 push constant 10
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 4
 goto end.653
 label false.653
 push this 2
 push constant 0
+lt
 not
 push argument 1
 push constant 1
 eq
+and
 push this 2
 push constant 0
+lt
 push argument 1
 push constant 1
 neg
 eq
+and
 or
 not
 if-goto false.668
 push constant 20
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 4
 goto end.668
 label false.668
 push constant 5
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 4
 label end.668
 label end.653
 push this 14
@@ -465,29 +340,20 @@ eq
 not
 if-goto false.720
 push constant 506
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 3
 push constant 50
 neg
 call Math.multiply 2
 push local 2
 call Math.divide 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push this 1
 push local 1
 push local 4
 call Math.multiply 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 goto end.720
 label false.720
 push this 14
@@ -496,28 +362,19 @@ eq
 not
 if-goto false.760
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 3
 push constant 50
 call Math.multiply 2
 push local 2
 call Math.divide 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push this 1
 push local 1
 push local 4
 call Math.multiply 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 goto end.760
 label false.760
 push this 14
@@ -526,73 +383,130 @@ eq
 not
 if-goto false.797
 push constant 250
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push local 2
 push constant 25
 neg
 call Math.multiply 2
 push local 3
 call Math.divide 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push this 0
 push local 0
 push local 4
 call Math.multiply 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 goto end.797
 label false.797
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push local 2
 push constant 25
 call Math.multiply 2
 push local 3
 call Math.divide 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push this 0
 push local 0
 push local 4
 call Math.multiply 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 label end.797
 label end.760
 label end.720
 push local 0
 push local 1
 call setDestination 2
-pop temp 0
 push constant 0
 return
 
 
 //class symbol table
+//name: x
+//type: int
+//kind: field
+//number: 0
+//name: y
+//type: int
+//kind: field
+//number: 1
+//name: lengthx
+//type: int
+//kind: field
+//number: 2
+//name: lengthy
+//type: int
+//kind: field
+//number: 3
+//name: d
+//type: int
+//kind: field
+//number: 4
+//name: straightD
+//type: int
+//kind: field
+//number: 5
+//name: diagonalD
+//type: int
+//kind: field
+//number: 6
+//name: invert
+//type: boolean
+//kind: field
+//number: 7
+//name: positivex
+//type: boolean
+//kind: field
+//number: 8
+//name: positivey
+//type: boolean
+//kind: field
+//number: 9
+//name: leftWall
+//type: int
+//kind: field
+//number: 10
+//name: rightWall
+//type: int
+//kind: field
+//number: 11
+//name: topWall
+//type: int
+//kind: field
+//number: 12
+//name: bottomWall
+//type: int
+//kind: field
+//number: 13
 //name: wall
 //type: int
-//kind: this
+//kind: field
 //number: 14
 
 
 //method's symbol table
+//name: Ax
+//type: int
+//kind: argument
+//number: 0
+//name: Ay
+//type: int
+//kind: argument
+//number: 1
+//name: AleftWall
+//type: int
+//kind: argument
+//number: 2
+//name: ArightWall
+//type: int
+//kind: argument
+//number: 3
+//name: AtopWall
+//type: int
+//kind: argument
+//number: 4
 //name: AbottomWall
 //type: int
 //kind: argument
@@ -1062,6 +976,26 @@ return
 
 
 //method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: destx
+//type: int
+//kind: argument
+//number: 1
+//name: desty
+//type: int
+//kind: argument
+//number: 2
+//name: dx
+//type: int
+//kind: var
+//number: 0
+//name: dy
+//type: int
+//kind: var
+//number: 1
 //name: temp
 //type: int
 //kind: var
@@ -1196,6 +1130,30 @@ return
 
 
 //method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: bouncingDirection
+//type: int
+//kind: argument
+//number: 1
+//name: newx
+//type: int
+//kind: var
+//number: 0
+//name: newy
+//type: int
+//kind: var
+//number: 1
+//name: divLengthx
+//type: int
+//kind: var
+//number: 2
+//name: divLengthy
+//type: int
+//kind: var
+//number: 3
 //name: factor
 //type: int
 //kind: var
