--- a/TestFiles/Project11/Square/Square.vm
+++ b/TestFiles/Project11/Square/Square.vm
@@ -1,5 +1,5 @@
 function Square.new 0
-push constant 3
+push constant 0
 call Memory.alloc 1
 pop pointer 0
 push argument 0
@@ -63,20 +63,21 @@ push this 1
 push this 2
 add
 push constant 254
+lt
 push this 0
 push this 2
 add
 push constant 510
+lt
+and
 not
 if-goto false.144
 call erase 0
-pop temp 0
 push this 2
 push constant 2
 add
 pop this 2
 call draw 0
-pop temp 0
 goto end.144
 label false.144
 label end.144
@@ -87,16 +88,15 @@ push argument 0
 pop pointer 0
 push this 2
 push constant 2
+gt
 not
 if-goto false.194
 call erase 0
-pop temp 0
 push this 2
 push constant 2
 sub
 pop this 2
 call draw 0
-pop temp 0
 goto end.194
 label false.194
 label end.194
@@ -107,6 +107,7 @@ push argument 0
 pop pointer 0
 push this 1
 push constant 1
+gt
 not
 if-goto false.228
 push constant 0
@@ -156,6 +157,7 @@ push this 1
 push this 2
 add
 push constant 254
+lt
 not
 if-goto false.310
 push constant 0
@@ -203,6 +205,7 @@ push argument 0
 pop pointer 0
 push this 0
 push constant 1
+gt
 not
 if-goto false.396
 push constant 0
@@ -252,6 +255,7 @@ push this 0
 push this 2
 add
 push constant 510
+lt
 not
 if-goto false.478
 push constant 0
@@ -299,15 +303,15 @@ return
 //class symbol table
 //name: x
 //type: int
-//kind: this
+//kind: field
 //number: 0
 //name: y
 //type: int
-//kind: this
+//kind: field
 //number: 1
 //name: size
 //type: int
-//kind: this
+//kind: field
 //number: 2
 
 
