--- a/TestFiles/Project11/Square/SquareGame.vm
+++ b/TestFiles/Project11/Square/SquareGame.vm
@@ -1,5 +1,5 @@
 function SquareGame.new 0
-push constant 2
+push constant 0
 call Memory.alloc 1
 pop pointer 0
 push constant 0
@@ -15,8 +15,7 @@ function SquareGame.dispose 0
 push argument 0
 pop pointer 0
 push this 0
-call Square.dispose 1
-pop temp 0
+call .dispose 1
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
@@ -31,8 +30,7 @@ eq
 not
 if-goto false.70
 push this 0
-call Square.moveUp 1
-pop temp 0
+call .moveUp 1
 goto end.70
 label false.70
 label end.70
@@ -42,8 +40,7 @@ eq
 not
 if-goto false.85
 push this 0
-call Square.moveDown 1
-pop temp 0
+call .moveDown 1
 goto end.85
 label false.85
 label end.85
@@ -53,8 +50,7 @@ eq
 not
 if-goto false.100
 push this 0
-call Square.moveLeft 1
-pop temp 0
+call .moveLeft 1
 goto end.100
 label false.100
 label end.100
@@ -64,8 +60,7 @@ eq
 not
 if-goto false.115
 push this 0
-call Square.moveRight 1
-pop temp 0
+call .moveRight 1
 goto end.115
 label false.115
 label end.115
@@ -91,10 +86,8 @@ eq
 not
 if-goto end.166
 call Keyboard.keyPressed 0
-pop temp 0
 pop local 0
 call moveSquare 0
-pop temp 0
 label end.166
 push local 0
 push constant 81
@@ -113,8 +106,7 @@ eq
 not
 if-goto false.201
 push this 0
-call Square.decSize 1
-pop temp 0
+call .decSize 1
 goto end.201
 label false.201
 label end.201
@@ -124,8 +116,7 @@ eq
 not
 if-goto false.216
 push this 0
-call Square.incSize 1
-pop temp 0
+call .incSize 1
 goto end.216
 label false.216
 label end.216
@@ -177,10 +168,8 @@ not
 not
 if-goto end.283
 call Keyboard.keyPressed 0
-pop temp 0
 pop local 0
 call moveSquare 0
-pop temp 0
 label end.283
 label end.160
 push constant 0
@@ -190,11 +179,11 @@ return
 //class symbol table
 //name: square
 //type: Square
-//kind: this
+//kind: field
 //number: 0
 //name: direction
 //type: int
-//kind: this
+//kind: field
 //number: 1
 
 
