--- a/TestFiles/Project11/Pong/Main.vm
+++ b/TestFiles/Project11/Pong/Main.vm
@@ -4,9 +4,11 @@ pop temp 0
 call PongGame.getInstance 0
 pop local 0
 push local 0
-call .run 1
+call PongGame.run 1
+pop temp 0
 push local 0
-call .dispose 1
+call PongGame.dispose 1
+pop temp 0
 push constant 0
 return
 
