--- a/TestFiles/Project11/Pong/PongGame.vm
+++ b/TestFiles/Project11/Pong/PongGame.vm
@@ -3,20 +3,15 @@ push constant 7
 call Memory.alloc 1
 pop pointer 0
 call Screen.clearScreen 0
-push constant 50
 pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+push constant 50
+pop this 6
 push constant 230
 push constant 229
 push this 6
 push constant 7
 call Bat.new 4
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push constant 253
 push constant 222
 push constant 0
@@ -24,44 +19,33 @@ push constant 511
 push constant 0
 push constant 229
 call Ball.new 6
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push this 1
 push constant 400
 push constant 0
 call Ball.setDestination 3
+pop temp 0
 push constant 0
 push constant 238
 push constant 511
 push constant 240
 call Screen.drawRectangle 4
+pop temp 0
 push constant 22
 push constant 0
 call Output.moveCursor 2
+pop temp 0
 push constant Score: 0
 call Output.printString 1
-push constant 0
 pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 3
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 4
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
+push constant 0
+pop this 5
 push pointer 0
 return
 function PongGame.dispose 0
@@ -80,11 +64,7 @@ push constant 0
 return
 function PongGame.newInstance 0
 call PongGame.new 0
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop static 0
 push constant 0
 return
 function PongGame.getInstance 0
@@ -104,19 +84,15 @@ push constant 0
 eq
 push this 3
 not
+and
 not
 if-goto end.230
 call Keyboard.keyPressed 0
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push this 0
 call Bat.move 1
 pop temp 0
 call moveBall 0
-pop temp 0
 push constant 50
 call Sys.wait 1
 pop temp 0
@@ -150,10 +126,7 @@ not
 if-goto false.310
 push constant 1
 not
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 3
 goto end.310
 label false.310
 label end.310
@@ -166,19 +139,15 @@ eq
 not
 push this 3
 not
+and
 not
 if-goto end.325
 call Keyboard.keyPressed 0
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push this 0
 call Bat.move 1
 pop temp 0
 call moveBall 0
-pop temp 0
 push constant 50
 call Sys.wait 1
 pop temp 0
@@ -204,57 +173,33 @@ push argument 0
 pop pointer 0
 push this 1
 call Ball.move 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 push this 2
 push constant 0
+gt
 push this 2
 push this 5
 eq
 not
+and
 not
 if-goto false.427
 push this 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 5
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push this 0
 call Bat.getLeft 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push this 0
 call Bat.getRight 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 push this 1
 call Ball.getLeft 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 3
 push this 1
 call Ball.getRight 1
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 4
 push this 2
 push constant 4
 eq
@@ -262,13 +207,12 @@ not
 if-goto false.491
 push local 1
 push local 4
+gt
 push local 2
 push local 3
+lt
 or
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 3
 push this 3
 not
 not
@@ -277,27 +221,23 @@ push local 4
 push local 1
 push constant 10
 add
+lt
 not
 if-goto false.519
 push constant 1
 neg
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 goto end.519
 label false.519
 push local 3
 push local 2
 push constant 10
 sub
+gt
 not
 if-goto false.539
 push constant 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 goto end.539
 label false.539
 label end.539
@@ -305,10 +245,7 @@ label end.519
 push this 6
 push constant 2
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 6
 push this 0
 push this 6
 call Bat.setWidth 2
@@ -316,10 +253,7 @@ pop temp 0
 push this 4
 push constant 1
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 4
 push constant 22
 push constant 7
 call Output.moveCursor 2
@@ -345,9 +279,37 @@ return
 
 
 //class symbol table
+//name: instance
+//type: PongGame
+//kind: static
+//number: 0
+//name: bat
+//type: Bat
+//kind: field
+//number: 0
+//name: ball
+//type: Ball
+//kind: field
+//number: 1
+//name: wall
+//type: int
+//kind: field
+//number: 2
+//name: exit
+//type: boolean
+//kind: field
+//number: 3
+//name: score
+//type: int
+//kind: field
+//number: 4
+//name: lastWall
+//type: int
+//kind: field
+//number: 5
 //name: batWidth
 //type: int
-//kind: this
+//kind: field
 //number: 6
 
 
@@ -496,6 +458,10 @@ return
 
 
 //method's symbol table
+//name: this
+//type: PongGame
+//kind: argument
+//number: 0
 //name: key
 //type: char
 //kind: var
@@ -535,6 +501,26 @@ return
 
 
 //method's symbol table
+//name: this
+//type: PongGame
+//kind: argument
+//number: 0
+//name: bouncingDirection
+//type: int
+//kind: var
+//number: 0
+//name: batLeft
+//type: int
+//kind: var
+//number: 1
+//name: batRight
+//type: int
+//kind: var
+//number: 2
+//name: ballLeft
+//type: int
+//kind: var
+//number: 3
 //name: ballRight
 //type: int
 //kind: var
