--- a/TestFiles/Project10/ArrayTest/Main.vm
+++ b/TestFiles/Project10/ArrayTest/Main.vm
@@ -1,25 +1,111 @@
 function Main.main 4
-push constant HOW MANY NUMBERS?  
+push constant 19
+call String.new 1
+push constant 72
+call String.appendChar 2
+push constant 79
+call String.appendChar 2
+push constant 87
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 77
+call String.appendChar 2
+push constant 65
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 89
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 85
+call String.appendChar 2
+push constant 77
+call String.appendChar 2
+push constant 66
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 83
+call String.appendChar 2
+push constant 63
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
 call Keyboard.readInt 1
-pop temp 0
 pop local 1
 push local 1
 call Array.new 1
-pop temp 0
 pop local 0
 push constant 0
 pop local 2
 label true.48
 push local 2
 push local 1
+lt
 not
 if-goto end.48
 push local 0
 push local 2
 add
-push constant ENTER THE NEXT NUMBER:  
+push constant 24
+call String.new 1
+push constant 69
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 72
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 88
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 85
+call String.appendChar 2
+push constant 77
+call String.appendChar 2
+push constant 66
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
 call Keyboard.readInt 1
-pop temp 0
 pop local 0
 push local 2
 push constant 1
@@ -33,6 +119,7 @@ pop local 3
 label true.86
 push local 2
 push local 1
+lt
 not
 if-goto end.86
 push local 3
@@ -48,7 +135,42 @@ push constant 1
 add
 pop local 2
 label end.86
-push constant THE AVERAGE IS:  
+push constant 17
+call String.new 1
+push constant 84
+call String.appendChar 2
+push constant 72
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 65
+call String.appendChar 2
+push constant 86
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 65
+call String.appendChar 2
+push constant 71
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 73
+call String.appendChar 2
+push constant 83
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push local 3
