--- a/TestFiles/Project10/ExpressionLessSquare/SquareGame.vm
+++ b/TestFiles/Project10/ExpressionLessSquare/SquareGame.vm
@@ -3,15 +3,9 @@ push constant 2
 call Memory.alloc 1
 pop pointer 0
 push this 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push this 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push this 0
 return
 function SquareGame.dispose 0
@@ -73,10 +67,7 @@ function SquareGame.run 2
 push argument 0
 pop pointer 0
 push local 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 label true.143
 push local 1
 not
@@ -86,21 +77,14 @@ push local 0
 not
 if-goto end.148
 push local 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 call moveSquare 0
-pop temp 0
 label end.148
 push local 0
 not
 if-goto false.164
 push local 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 goto end.164
 label false.164
 label end.164
@@ -126,10 +110,7 @@ push local 0
 not
 if-goto false.201
 push local 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.201
 label false.201
 label end.201
@@ -137,10 +118,7 @@ push local 0
 not
 if-goto false.212
 push local 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.212
 label false.212
 label end.212
@@ -148,10 +126,7 @@ push local 0
 not
 if-goto false.223
 push this 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.223
 label false.223
 label end.223
@@ -159,10 +134,7 @@ push local 0
 not
 if-goto false.234
 push this 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 goto end.234
 label false.234
 label end.234
@@ -171,12 +143,8 @@ push local 0
 not
 if-goto end.245
 push local 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 call moveSquare 0
-pop temp 0
 label end.245
 label end.143
 push constant 0
@@ -184,9 +152,13 @@ return
 
 
 //class symbol table
+//name: square
+//type: Square
+//kind: field
+//number: 0
 //name: direction
 //type: int
-//kind: this
+//kind: field
 //number: 1
 
 
@@ -232,6 +204,14 @@ return
 
 
 //method's symbol table
+//name: this
+//type: SquareGame
+//kind: argument
+//number: 0
+//name: key
+//type: char
+//kind: var
+//number: 0
 //name: exit
 //type: boolean
 //kind: var
