--- a/TestFiles/Project10/Square/Main.vm
+++ b/TestFiles/Project10/Square/Main.vm
@@ -1,10 +1,6 @@
 function Main.main 1
 call SquareGame.new 0
-pop temp 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 0
 call SquareGame.run 1
 pop temp 0
@@ -17,16 +13,41 @@ function Main.test 4
 push constant 0
 not
 if-goto false.63
-push constant string constant
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+push constant 15
+call String.new 1
+push constant 115
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 103
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+pop local 2
 push constant 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 2
 push local 3
 push constant 1
 add
@@ -35,35 +56,23 @@ push constant 2
 add
 pop pointer 1
 push that 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 3
 goto end.63
 label false.63
 push local 0
 push local 1
 neg
 call Math.multiply 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 push local 1
 push constant 2
 neg
 call Math.divide 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 1
 push local 0
 push local 1
 or
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop local 0
 label end.63
 push constant 0
 return
@@ -88,6 +97,18 @@ return
 
 
 //method's symbol table
+//name: i
+//type: int
+//kind: var
+//number: 0
+//name: j
+//type: int
+//kind: var
+//number: 1
+//name: s
+//type: String
+//kind: var
+//number: 2
 //name: a
 //type: Array
 //kind: var
