--- a/TestFiles/Project10/Square/Square.vm
+++ b/TestFiles/Project10/Square/Square.vm
@@ -3,20 +3,11 @@ push constant 3
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push argument 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push argument 2
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 call draw 0
 push pointer 0
 return
@@ -72,23 +63,21 @@ push this 1
 push this 2
 add
 push constant 254
+lt
 push this 0
 push this 2
 add
 push constant 510
+lt
+and
 not
 if-goto false.144
 call erase 0
-pop temp 0
 push this 2
 push constant 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 call draw 0
-pop temp 0
 goto end.144
 label false.144
 label end.144
@@ -99,19 +88,15 @@ push argument 0
 pop pointer 0
 push this 2
 push constant 2
+gt
 not
 if-goto false.194
 call erase 0
-pop temp 0
 push this 2
 push constant 2
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 2
 call draw 0
-pop temp 0
 goto end.194
 label false.194
 label end.194
@@ -122,6 +107,7 @@ push argument 0
 pop pointer 0
 push this 1
 push constant 1
+gt
 not
 if-goto false.228
 push constant 0
@@ -144,10 +130,7 @@ pop temp 0
 push this 1
 push constant 2
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push constant 1
 not
 call Screen.setColor 1
@@ -174,6 +157,7 @@ push this 1
 push this 2
 add
 push constant 254
+lt
 not
 if-goto false.310
 push constant 0
@@ -192,10 +176,7 @@ pop temp 0
 push this 1
 push constant 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push constant 1
 not
 call Screen.setColor 1
@@ -224,6 +205,7 @@ push argument 0
 pop pointer 0
 push this 0
 push constant 1
+gt
 not
 if-goto false.396
 push constant 0
@@ -246,10 +228,7 @@ pop temp 0
 push this 0
 push constant 2
 sub
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push constant 1
 not
 call Screen.setColor 1
@@ -276,6 +255,7 @@ push this 0
 push this 2
 add
 push constant 510
+lt
 not
 if-goto false.478
 push constant 0
@@ -294,10 +274,7 @@ pop temp 0
 push this 0
 push constant 2
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push constant 1
 not
 call Screen.setColor 1
@@ -324,13 +301,29 @@ return
 
 
 //class symbol table
+//name: x
+//type: int
+//kind: field
+//number: 0
+//name: y
+//type: int
+//kind: field
+//number: 1
 //name: size
 //type: int
-//kind: this
+//kind: field
 //number: 2
 
 
 //method's symbol table
+//name: Ax
+//type: int
+//kind: argument
+//number: 0
+//name: Ay
+//type: int
+//kind: argument
+//number: 1
 //name: Asize
 //type: int
 //kind: argument
