--- a/TestFiles/Project11/Pong/PongGame.vm
+++ b/TestFiles/Project11/Pong/PongGame.vm
@@ -35,7 +35,24 @@ push constant 22
 push constant 0
 call Output.moveCursor 2
 pop temp 0
-push constant Score: 0
+push constant 8
+call String.new 1
+push constant 83
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 48
+call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push constant 0
@@ -160,7 +177,26 @@ push constant 10
 push constant 27
 call Output.moveCursor 2
 pop temp 0
-push constant Game Over
+push constant 9
+call String.new 1
+push constant 71
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 79
+call String.appendChar 2
+push constant 118
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
 call Output.printString 1
 pop temp 0
 goto end.373
