--- a/TestFiles/Project11/Square/SquareGame.vm
+++ b/TestFiles/Project11/Square/SquareGame.vm
@@ -1,5 +1,5 @@
 function SquareGame.new 0
-push constant 0
+push constant 2
 call Memory.alloc 1
 pop pointer 0
 push constant 0
@@ -15,7 +15,8 @@ function SquareGame.dispose 0
 push argument 0
 pop pointer 0
 push this 0
-call .dispose 1
+call Square.dispose 1
+pop temp 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
@@ -30,7 +31,8 @@ eq
 not
 if-goto false.70
 push this 0
-call .moveUp 1
+call Square.moveUp 1
+pop temp 0
 goto end.70
 label false.70
 label end.70
@@ -40,7 +42,8 @@ eq
 not
 if-goto false.85
 push this 0
-call .moveDown 1
+call Square.moveDown 1
+pop temp 0
 goto end.85
 label false.85
 label end.85
@@ -50,7 +53,8 @@ eq
 not
 if-goto false.100
 push this 0
-call .moveLeft 1
+call Square.moveLeft 1
+pop temp 0
 goto end.100
 label false.100
 label end.100
@@ -60,7 +64,8 @@ eq
 not
 if-goto false.115
 push this 0
-call .moveRight 1
+call Square.moveRight 1
+pop temp 0
 goto end.115
 label false.115
 label end.115
@@ -106,7 +111,8 @@ eq
 not
 if-goto false.201
 push this 0
-call .decSize 1
+call Square.decSize 1
+pop temp 0
 goto end.201
 label false.201
 label end.201
@@ -116,7 +122,8 @@ eq
 not
 if-goto false.216
 push this 0
-call .incSize 1
+call Square.incSize 1
+pop temp 0
 goto end.216
 label false.216
 label end.216
