--- a/TestFiles/Project9/Player.vm
+++ b/TestFiles/Project9/Player.vm
@@ -3,10 +3,7 @@ push constant 1
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push pointer 0
 return
 function Player.getNumHits 0
@@ -20,10 +17,7 @@ pop pointer 0
 push this 0
 push constant 1
 add
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push constant 0
 return
 function Player.dispose 0
@@ -31,7 +25,6 @@ push argument 0
 pop pointer 0
 push pointer 0
 call Memory.dealloc 1
-pop temp 0
 push constant 0
 return
 
@@ -39,7 +32,7 @@ return
 //class symbol table
 //name: numHits
 //type: int
-//kind: this
+//kind: field
 //number: 0
 
 
