--- a/TestFiles/Project9/Vertex.vm
+++ b/TestFiles/Project9/Vertex.vm
@@ -3,15 +3,9 @@ push constant 2
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 0
 push argument 1
-pop temp 0
-pop pointer 1
-push temp 0
-pop that 0
+pop this 1
 push pointer 0
 return
 function Vertex.getX 0
@@ -29,19 +23,26 @@ push argument 0
 pop pointer 0
 push pointer 0
 call Memory.dealloc 1
-pop temp 0
 push constant 0
 return
 
 
 //class symbol table
+//name: x
+//type: int
+//kind: field
+//number: 0
 //name: y
 //type: int
-//kind: this
+//kind: field
 //number: 1
 
 
 //method's symbol table
+//name: _x
+//type: int
+//kind: argument
+//number: 0
 //name: _y
 //type: int
 //kind: argument
